--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>Omkar</title>
 </head>
 <body>
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+<h1>believe in yourself</h1>
+<p>be confident ,respect elders,give respect and take respect.Do hard work </p>
 
 </body>
 </html>
