--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 <title>Omkar</title>
 </head>
 <body>
+  
+  <h1 style="color:blue;">A Blue Heading</h1>
+
+<p style="color:red;">A red paragraph.</p>
 
 <h1>believe in yourself</h1>
 <p>be confident ,respect elders,give respect and take respect.Do hard work </p>
