--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 </head>
 <body>
   
-  <h1 style="color:blue;">A Blue Heading</h1>
+  <h1 style="color:blue;">Believe in yourself</h1>
 
-<p style="color:red;">A red paragraph.</p>
+<p style="color:red;">this is my first code of github</p>
 
 
 </body>
